SSDM-13479: SSDM-13501